# TicTacToe_Game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml  cmake_test.yaml  cmake_test.yml
include/: play.hpp  player.hpp
src/: main.cpp  play.cpp  player.cpp
tests/: MyTests.cpp  test_player.cpp
